kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    labels:
        service: app
    namespace: ${NAMESPACE}
    annotations:
        repositoryUrl: ${BUILD_REPOSITORY_URI}
        commit: ${COMMIT}
        tag: ${TAG}
        image: ${IMAGE}
spec:
    replicas: 1
    minReadySeconds: 5
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    selector:
        matchLabels:
            service: app
    template:
        metadata:
            labels:
                service: app
        spec:
            containers:
                - image: ${IMAGE_TAG}
                  name: app
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: http
                        containerPort: ${APP_PORT}
                        protocol: TCP
                  resources:
                      limits:
                          cpu: 500m
                          memory: 1Gi
                      requests:
                          cpu: 50m
                          memory: 64Mi
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: http
                      initialDelaySeconds: 5
                      periodSeconds: 5
                      failureThreshold: 6
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: http
                      initialDelaySeconds: 30
                      periodSeconds: 15
                      failureThreshold: 3
                  volumeMounts:
                  - mountPath: "/home/node/app/resources/google-pay"
                    name: google-wallet-credentials
                    readOnly: true
                  - mountPath: "/home/node/app/resources/apple-wallet"
                    name: apple-wallet-keys
                    readOnly: true
                  - mountPath: "/home/node/app/resources/keys"
                    name: keys
                    readOnly: true
                  - mountPath: "/home/node/app/resources/test-keys"
                    name: test-keys
                    readOnly: true
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            terminationGracePeriodSeconds: 30
            imagePullSecrets:
                - name: ${IMAGE_PULL_SECRET}
            volumes:
            - name: google-wallet-credentials
              secret:
                secretName: ${BUILD_REPOSITORY_NAME}-google-wallet
            - name: apple-wallet-keys
              secret:
                secretName: ${BUILD_REPOSITORY_NAME}-apple-wallet
            - name: keys
              secret:
                secretName: ${BUILD_REPOSITORY_NAME}-keys
            - name: test-keys
              secret:
                secretName: ${BUILD_REPOSITORY_NAME}-test-keys
