kubernetes/base/service-app.yml
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: ${NAMESPACE}
    labels:
        service: app
spec:
    ports:
        - protocol: TCP
          port: 80
          targetPort: ${APP_PORT}
    selector:
        service: app
