kubernetes/base/service-db.yml
apiVersion: v1
kind: Service
metadata:
    name: database
    namespace: ${NAMESPACE}
    labels:
        service: database
spec:
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
    selector:
        service: database
