kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    namespace: ${NAMESPACE}
    labels:
        service: app
    annotations:
        cert-manager.io/cluster-issuer: cloudflare-dns01
        cert-manager.io/issue-temporary-certificate: 'true'
spec:
	ingressClassName: nginx
    tls:
        - hosts:
              - ${API_HOST}
              - www.${API_HOST}
          secretName: tls
    rules:
        - host: ${API_HOST}
          http:
              paths:
                  - path: /
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: app
                            port:
                                number: 80
        - host: www.${API_HOST}
          http:
              paths:
                  - path: /
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: app
                            port:
                                number: 80
